--- a/upload/build.gradle
+++ b/upload/build.gradle
@@ -25,6 +25,10 @@ android {
         }
     }
 
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+        freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn"]
+    }
 }
 
 dependencies {
@@ -35,6 +39,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // coroutines
+    compileOnly 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
+    compileOnly 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 
     implementation project(':core')
 }
