--- a/download/build.gradle
+++ b/download/build.gradle
@@ -1,6 +1,8 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'com.github.dcendents.android-maven'// 上传jitPack
+}
 
 android {
     compileSdkVersion 30
@@ -33,18 +35,15 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.core:core-ktx:1.3.2'
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // coroutines
-    compileOnly 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
-    compileOnly 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    compileOnly 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+    compileOnly 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
 
     implementation project(':core')
 }
-
-apply from: rootProject.file('./gradle-mvn-push.gradle')
